--------------------------------------------------------
--  DDL for Table CFS_EVENT
--------------------------------------------------------
CREATE TABLE CFS_EVENT
(
    "ID" NUMBER(12,0) NOT NULL,
    "EVENT_ID" RAW(16),
    "EVENT_NUMBER" VARCHAR2(40 CHAR),
    "EVENT_TYPE_CODE" VARCHAR2(40 CHAR),
    "EVENT_TIME" DATE,
    "DISPATCH_TIME" DATE,
    "AGENCY_ID" RAW(16) NOT NULL,
    "RESPONDER_ID" NUMBER(12,0) NOT NULL
);

--PK
ALTER TABLE "CFS_EVENT" ADD CONSTRAINT "PK_CFS_EVENT" PRIMARY KEY ("ID");
CREATE SEQUENCE SEQ_CFS_EVENT MINVALUE 1 MAXVALUE 999999999999999 INCREMENT BY 1 CACHE 100;

--------------------------------------------------------
--  DDL for Table AGENCY
--------------------------------------------------------
CREATE TABLE AGENCY
(
    "ID" RAW(16) NOT NULL,
    "NAME" VARCHAR2(40 CHAR)
);

ALTER TABLE "AGENCY" ADD CONSTRAINT "PK_AGENCY" PRIMARY KEY ("ID");

CREATE SEQUENCE SEQ_AGENCY MINVALUE 1 MAXVALUE 999999999999999 INCREMENT BY 1 CACHE 100;
--FK
ALTER TABLE "CFS_EVENT" ADD CONSTRAINT "FK_CFS_EVENT_AGENCY" FOREIGN KEY ("AGENCY_ID") REFERENCES "AGENCY" ("ID");



--------------------------------------------------------
--  DDL for Table RESPONDER
--------------------------------------------------------
CREATE TABLE RESPONDER
(
    "ID" NUMBER(12,0) NOT NULL,
    "CODE" VARCHAR2(40 CHAR),
    "NAME" VARCHAR2(40 CHAR),
    "AGENCY_ID" RAW(16) NOT NULL
);

ALTER TABLE "RESPONDER" ADD CONSTRAINT "PK_RESPONDER" PRIMARY KEY ("ID");

CREATE SEQUENCE SEQ_RESPONDER MINVALUE 1 MAXVALUE 999999999999999 INCREMENT BY 1 CACHE 100;
ALTER TABLE "CFS_EVENT" ADD CONSTRAINT "FK_CFS_EVENT_RESPONDER" FOREIGN KEY ("RESPONDER_ID") REFERENCES "RESPONDER" ("ID");
ALTER TABLE "RESPONDER" ADD CONSTRAINT "FK_RESPONDER_AGENCY" FOREIGN KEY ("AGENCY_ID") REFERENCES "AGENCY" ("ID");

--------------------------------------------------------
--  DDL for Table USER
--------------------------------------------------------
CREATE TABLE "USER"
(
    "ID" NUMBER(12,0) NOT NULL,
    "USERNAME" VARCHAR2(40 CHAR),
    "PASSWORD" VARCHAR2(200 CHAR),
    "AGENCY_ID" RAW(16) NOT NULL
);

ALTER TABLE "USER" ADD CONSTRAINT "PK_USER" PRIMARY KEY ("ID");
ALTER TABLE "USER" ADD CONSTRAINT "FK_USER_AGENCY" FOREIGN KEY ("AGENCY_ID") REFERENCES "AGENCY" ("ID");